courses/430_programming-languages/assignment-6/tests/error/hw5_error12.nex
var f : int;
print "should not get here:n";
1 / 0;
   f = anon() : none { } + 1;
